# worktrunk

./: CHANGELOG.md  CLAUDE.md  Cargo.toml
.config/: lychee.toml  nextest.toml  wt.toml
.github/: CLAUDE.md  pull.yml
.github/workflows/: benchmarks.yaml  ci.yaml  nightly.yaml  publish-docs.yaml  release.yaml  tend-ci-fix.yaml  tend-mention.yaml  tend-nightly.yaml  tend-notifications.yaml  tend-review-runs.yaml  tend-review.yaml  tend-triage.yaml  tend-weekly.yaml
benches/: CLAUDE.md  alias.rs  completion.rs  list.rs  picker_preview.rs  prune.rs  time_to_first_output.rs
dev/: config.example.toml  wt.example.toml
docs/content/: claude-code.md  config.md  extending.md  faq.md  hook.md  list.md  llm-commits.md  merge.md  step.md  switch.md  tips-patterns.md  worktrunk.md
plugins/worktrunk/: CLAUDE.md
src/: diagnostic.rs  help_pager.rs  invocation.rs  llm.rs  logging.rs  main.rs  md_help.rs  progress.rs  shell_exec.rs  summary.rs  utils.rs
src/cli/: config.rs  list.rs  mod.rs  step.rs
src/commands/: CLAUDE.md  command_executor.rs  custom.rs  eval.rs  for_each.rs  hook_plan.rs  merge.rs  process.rs  run_pipeline.rs  statusline.rs
src/commands/config/: codex.rs  (+2 more)
src/config/: deprecation.rs  expansion.rs  mod.rs
src/git/: error.rs  fsmonitor.rs  mod.rs
src/output/: concurrent.rs  global.rs  handlers.rs
src/shell/: detection.rs  paths.rs  utils.rs
src/styling/: hyperlink.rs  mod.rs
src/testing/: mod.rs
tests/: CLAUDE.md
tests/common/: mod.rs  progressive_output.rs
tests/helpers/wt-perf/: Cargo.toml
tests/helpers/wt-perf/src/: lib.rs  main.rs
(+146 files in other folders)
