# HOW THE BINARY GETS BUILT:
# The CLI integration tests in tests/cli.rs are in-package, so cargo builds
# the wt-perf binary to run them (and sets CARGO_BIN_EXE_wt-perf). Combined
# with `workspace.default-members` including this package, a workspace
# `cargo test` builds and tests the binary automatically.
[package]
name = "wt-perf"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false
description = "Performance testing and tracing tools for worktrunk"

[dependencies]
# For repo setup
tempfile = "3.27"
dunce = "1"
# Resolve the cache directory for reusable fixtures (XDG on macOS too,
# matching worktrunk's own base-dir strategy in src/config/user/path.rs)
etcetera = "0.11"

# For CLI
clap = { version = "4.6", features = ["derive"] }

# For the shared warm/cold bench runner (bench_wt)
criterion = "0.8"

# For trace parsing (reuse worktrunk's trace module).
# `default-features = false` avoids leaking the `cli` feature into the
# workspace-unified resolution of worktrunk; without it, `cargo check
# --no-default-features` on the worktrunk lib silently inherits `cli`,
# masking gating bugs in lib code that uses `cli`-gated dependencies.
worktrunk = { path = "../../..", default-features = false }

[dev-dependencies]
serde_json = "1.0.145"

[lib]
name = "wt_perf"
path = "src/lib.rs"

[[bin]]
name = "wt-perf"
path = "src/main.rs"
